--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Idade</title>
-    <link rel="stylesheet" href="style.css"><script src="./script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
             <form method="post" onsubmit="calcularIdade(event)">
                 <div class="campo-form">
                     <label for="nome">Nome:</label>
-                    <input type="text" name="campo-nome" id="nome" placeholder="Insira seu nome completo" >
+                    <input type="text" name="campo-nome" id="nome" placeholder="Insira seu nome completo">
                 </div>
 
                 <div class="campo-form">
@@ -27,7 +28,7 @@
                         <input type="number" name="campo-mês-nascimento" id="mes-nascimento" placeholder="Mês">
                         <input type="number" name="campo-ano-nascimento" id="ano-nascimento" placeholder="Ano">
                     </div>
-                </div>                
+                </div>
 
                 <div class="conjunto-botoes">
                     <button type="reset">Limpar Formulário</button>
@@ -49,15 +50,15 @@
                     </tr>
                 </thead>
                 <tbody id="corpo-tabela">
-                    <tr>
+                    <!-- <tr>
                         <td data-cell="nome">Thiago Nascimento</td>
                         <td data-cell="data de nascimento">28/06/1998</td>
                         <td data-cell="idade">25 anos</td>
                         <td data-cell="faixa etária">21.1</td>
-                    </tr>                    
+                    </tr> -->
                 </tbody>
             </table>
-            <button class="botao-tabela">Limpar Registros</button>
+            <button class="botao-tabela" onclick="deletarRegistros()">Limpar Registros</button>
         </section>
     </main>
 </body>
